GNOME Bugzilla – Bug 696787
Runtime critical warning when hovering an about: uri in the entry completion
Last modified: 2013-03-30 11:10:15 UTC
** (epiphany:22115): CRITICAL **: void webkit_web_context_prefetch_dns(WebKitWebContext*, const char*): assertion `hostname' failed
Created attachment 240062 [details] [review] Patch
Review of attachment 240062 [details] [review]: This patch will basically make the function return with any invalid URI, I think, so maybe you can reword the commit message a bit.
Comment on attachment 240062 [details] [review] Patch Pushed to both branches.