Do not schedule a DNS prefetch for invalid URIs or without a hostname

It produces a runtime critical warning when trying to use
webkit_web_context_prefetch_dns() with a NULL hostname.

https://bugzilla.gnome.org/show_bug.cgi?id=696787